// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewsList /> <NewsList /> renders correctly (data loading case) 1`] = `
<div
  className="c-news-list"
>
  <div
    className="message"
  >
    <div
      className="c-preloader"
    >
      <div
        className="spinner"
      >
        <div
          className="bounce1"
          style={null}
        />
        <div
          className="bounce2"
          style={null}
        />
        <div
          className="bounce3"
          style={null}
        />
      </div>
    </div>
  </div>
  <div
    className="c-search-field loading"
  >
    <input
      className="search-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      value="foo"
    />
    <div />
  </div>
  <div
    className="container"
  >
    <div
      className="news-list"
    >
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/09/25/arts/25newamsterdam1/merlin_144237420_bf8f658f-7574-4665-b650-051b5cf0dec6-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Review: ‘New Amsterdam’ Puts Patients First, Subtlety Last
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              24 September 2018
            </p>
            <p
              className="item-snippet"
            >
              Heartfelt, well-meaning and dull, the NBC drama offers a sugarcoated pill for viewers’ anxieties about the health care system.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/09/24/arts/television/new-amsterdam-review-nbc.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/10/03/world/03AmsterdamTourist-1-print-alt/merlin_143250285_49999f7b-d1e8-4c48-b38b-50dc2e570bdf-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Amsterdam’s Plea to Tourists: Visit, but Please Behave Yourselves
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              3 October 2018
            </p>
            <p
              className="item-snippet"
            >
              There is a growing perception that the ballooning numbers traveling to the city — many lured by marijuana and prostitution — are doing more harm than good.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/10/02/world/europe/amsterdam-tourism-cannabis-prostitution.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/09/02/world/02amsterdam-shooting/02amsterdam-shooting-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Amsterdam Stabbing Victims Identified as U.S. Citizens
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              1 September 2018
            </p>
            <p
              className="item-snippet"
            >
              The U.S. ambassador to the Netherlands said two American tourists were attacked. The Dutch authorities said statements from the Afghan suspect pointed to a terrorist motive.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/09/01/world/europe/amsterdam-stabbing-americans.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/03/28/arts/28dutchopera/merlin_136043691_96f0eb3b-6dec-4e84-bbe8-14c0e4fedddf-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Instrumental Armies Do Battle at Amsterdam’s Opera
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              28 March 2018
            </p>
            <p
              className="item-snippet"
            >
              A wide-ranging Opera Forward Festival was the perfect send-off for Pierre Audi, leaving after three decades in charge of the Dutch National Opera.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/03/28/arts/music/review-dutch-opera-stockhausen-audi.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/27/arts/27HARING-ITEM1/merlin_140045382_019592ef-ee45-4135-ac97-6f57a0264fdb-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Keith Haring Mural in Amsterdam Is Uncovered After Nearly 30 Years
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              26 June 2018
            </p>
            <p
              className="item-snippet"
            >
              The 40-foot work, painted on the side of a storage facility, was hidden behind aluminum insulation panels.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/26/arts/design/keith-haring-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/01/18/travel/18checkin-amsterdam-1/18checkin-amsterdam-1-articleLarge-v4.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            At an Amsterdam Hotel, Canals and Character
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              17 February 2018
            </p>
            <p
              className="item-snippet"
            >
              The Pulitzer Amsterdam celebrates its past but has a flair for modern touches. Don’t miss the bar — or the boat tour.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/02/17/travel/pulitzer-amsterdam-hotel-review.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/27/opinion/27shorto/27shorto-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            New Amsterdam Figured Out Religious Tolerance 361 Years Ago
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              27 June 2018
            </p>
            <p
              className="item-snippet"
            >
              The Flushing Remonstrance to Peter Stuyvesant has a lot in common with Sonia Sotomayor’s rebuke of President Trump.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/27/opinion/travel-ban-supreme-court-new-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2017/10/09/climate/09vanderlaan/08vanderlaan-articleLarge-v2.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Eberhard van der Laan, Popular Mayor of Amsterdam, Dies at 62
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              7 October 2017
            </p>
            <p
              className="item-snippet"
            >
              A progressive-minded leader, he announced that he had lung cancer in January and wrote a farewell letter to the city’s residents when he stepped down in September.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2017/10/06/obituaries/eberhard-van-der-laan-dead-mayor-of-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item active"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/14/arts/14arts3/14RUF-ITEM2-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Inquiry Clears Museum Director Who Quit in Conflict-of-Interest Storm
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              13 June 2018
            </p>
            <p
              className="item-snippet"
            >
              Three board members resigned at the Stedelijk, the Netherlands’ leading modern art museum, after a report exonerated Beatrix Ruf, its former head.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/13/arts/design/beatrix-ruf-stedelijk-report.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/03/27/arts/27vangogh5/merlin_135552219_7b230766-cc6d-441c-aac2-47aec0be4fb2-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Van Gogh Never Visited Japan, but He Saw It Everywhere
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              26 March 2018
            </p>
            <p
              className="item-snippet"
            >
              After buying some prints in Paris in 1886, the Dutch painter became obsessed by Japanese art. An exhibition in Amsterdam explores how that fascination shaped his work.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/03/26/arts/design/vincent-van-gogh-japan.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="button-wrapper is-loading"
    >
      <div
        className="c-preloader"
      >
        <div
          className="spinner"
        >
          <div
            className="bounce1"
            style={
              Object {
                "backgroundColor": "white",
              }
            }
          />
          <div
            className="bounce2"
            style={
              Object {
                "backgroundColor": "white",
              }
            }
          />
          <div
            className="bounce3"
            style={
              Object {
                "backgroundColor": "white",
              }
            }
          />
        </div>
      </div>
      <button
        className="load-more-button"
        onClick={[Function]}
      >
        LOAD MORE
      </button>
    </div>
  </div>
</div>
`;

exports[`<NewsList /> <NewsList /> renders correctly 1`] = `
<div
  className="c-news-list"
>
  <div
    className="message"
  >
    Type and hit «Enter» for search
  </div>
  <div
    className="c-search-field loading"
  >
    <input
      className="search-input"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      value="foo"
    />
    <div />
  </div>
  <div
    className="container"
  >
    <div
      className="news-list"
    >
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/09/25/arts/25newamsterdam1/merlin_144237420_bf8f658f-7574-4665-b650-051b5cf0dec6-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Review: ‘New Amsterdam’ Puts Patients First, Subtlety Last
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              24 September 2018
            </p>
            <p
              className="item-snippet"
            >
              Heartfelt, well-meaning and dull, the NBC drama offers a sugarcoated pill for viewers’ anxieties about the health care system.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/09/24/arts/television/new-amsterdam-review-nbc.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/10/03/world/03AmsterdamTourist-1-print-alt/merlin_143250285_49999f7b-d1e8-4c48-b38b-50dc2e570bdf-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Amsterdam’s Plea to Tourists: Visit, but Please Behave Yourselves
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              3 October 2018
            </p>
            <p
              className="item-snippet"
            >
              There is a growing perception that the ballooning numbers traveling to the city — many lured by marijuana and prostitution — are doing more harm than good.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/10/02/world/europe/amsterdam-tourism-cannabis-prostitution.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/09/02/world/02amsterdam-shooting/02amsterdam-shooting-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Amsterdam Stabbing Victims Identified as U.S. Citizens
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              1 September 2018
            </p>
            <p
              className="item-snippet"
            >
              The U.S. ambassador to the Netherlands said two American tourists were attacked. The Dutch authorities said statements from the Afghan suspect pointed to a terrorist motive.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/09/01/world/europe/amsterdam-stabbing-americans.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/03/28/arts/28dutchopera/merlin_136043691_96f0eb3b-6dec-4e84-bbe8-14c0e4fedddf-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Instrumental Armies Do Battle at Amsterdam’s Opera
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              28 March 2018
            </p>
            <p
              className="item-snippet"
            >
              A wide-ranging Opera Forward Festival was the perfect send-off for Pierre Audi, leaving after three decades in charge of the Dutch National Opera.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/03/28/arts/music/review-dutch-opera-stockhausen-audi.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/27/arts/27HARING-ITEM1/merlin_140045382_019592ef-ee45-4135-ac97-6f57a0264fdb-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Keith Haring Mural in Amsterdam Is Uncovered After Nearly 30 Years
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              26 June 2018
            </p>
            <p
              className="item-snippet"
            >
              The 40-foot work, painted on the side of a storage facility, was hidden behind aluminum insulation panels.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/26/arts/design/keith-haring-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/01/18/travel/18checkin-amsterdam-1/18checkin-amsterdam-1-articleLarge-v4.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            At an Amsterdam Hotel, Canals and Character
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              17 February 2018
            </p>
            <p
              className="item-snippet"
            >
              The Pulitzer Amsterdam celebrates its past but has a flair for modern touches. Don’t miss the bar — or the boat tour.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/02/17/travel/pulitzer-amsterdam-hotel-review.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/27/opinion/27shorto/27shorto-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            New Amsterdam Figured Out Religious Tolerance 361 Years Ago
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              27 June 2018
            </p>
            <p
              className="item-snippet"
            >
              The Flushing Remonstrance to Peter Stuyvesant has a lot in common with Sonia Sotomayor’s rebuke of President Trump.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/27/opinion/travel-ban-supreme-court-new-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2017/10/09/climate/09vanderlaan/08vanderlaan-articleLarge-v2.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Eberhard van der Laan, Popular Mayor of Amsterdam, Dies at 62
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              7 October 2017
            </p>
            <p
              className="item-snippet"
            >
              A progressive-minded leader, he announced that he had lung cancer in January and wrote a farewell letter to the city’s residents when he stepped down in September.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2017/10/06/obituaries/eberhard-van-der-laan-dead-mayor-of-amsterdam.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item active"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/06/14/arts/14arts3/14RUF-ITEM2-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Inquiry Clears Museum Director Who Quit in Conflict-of-Interest Storm
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              13 June 2018
            </p>
            <p
              className="item-snippet"
            >
              Three board members resigned at the Stedelijk, the Netherlands’ leading modern art museum, after a report exonerated Beatrix Ruf, its former head.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/06/13/arts/design/beatrix-ruf-stedelijk-report.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
      <div
        className="c-news-item"
        onClick={[Function]}
      >
        <div
          className="item-media"
          style={null}
        >
          <div
            className="image-wrapper"
          >
            <img
              alt=""
              src="https://static01.nyt.com/images/2018/03/27/arts/27vangogh5/merlin_135552219_7b230766-cc6d-441c-aac2-47aec0be4fb2-articleLarge.jpg"
            />
          </div>
        </div>
        <div
          className="item-body"
        >
          <h3
            className="item-title"
          >
            Van Gogh Never Visited Japan, but He Saw It Everywhere
          </h3>
          <div
            className="item-description"
          >
            <p
              className="item-published"
            >
              Publisherd: 
              26 March 2018
            </p>
            <p
              className="item-snippet"
            >
              After buying some prints in Paris in 1886, the Dutch painter became obsessed by Japanese art. An exhibition in Amsterdam explores how that fascination shaped his work.
            </p>
            <p
              className="read-more"
            >
              <a
                href="https://www.nytimes.com/2018/03/26/arts/design/vincent-van-gogh-japan.html"
                target="_blank"
              >
                Read more
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="button-wrapper"
    >
      <button
        className="load-more-button"
        onClick={[Function]}
      >
        LOAD MORE
      </button>
    </div>
  </div>
</div>
`;
